--- a/index.ipynb
+++ b/index.ipynb
@@ -224,22 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block (<ipython-input-8-90bf5e8b15ea>, line 3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-90bf5e8b15ea>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(countries)\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Croatia', 'USA', 'Argentina']\n",
+      "['Croatia', 'USA', 'Argentina']\n",
+      "['Croatia', 'USA', 'Argentina']\n"
      ]
     }
    ],
    "source": [
     "countries = ['Croatia', 'USA', 'Argentina']\n",
     "for i in [0, 1, 2]:\n",
-    "print(countries)"
+    "    print(countries)"
    ]
   },
   {
