Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,23 +224,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Croatia', 'USA', 'Argentina']\n",
-      "['Croatia', 'USA', 'Argentina']\n",
-      "['Croatia', 'USA', 'Argentina']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "countries = ['Croatia', 'USA', 'Argentina']\n",
     "for i in [0, 1, 2]:\n",
-    "    print(countries)"
+    "    print(countries[i])"
    ]
   },
   {
